@@ -3,6 +3,7 @@
 import warnings
 
 import iris
+import iris.analysis.cartography
 import iris.cube
 import numpy as np
 from iris.util import equalise_attributes
@@ -157,3 +158,43 @@ def mask_other_hemisphere(cube, hemisphere):
     else:
         raise ValueError("Invalid hemisphere, must be 'north' or 'south'")
     return cube
+
+
+def compute_area_weights(cube):
+    if is_grid_regular(cube):
+        return compute_regular_grid_weights(cube)
+    return compute_reduced_grid_weights(cube)
+
+
+def is_grid_regular(cube) -> bool:
+    if not cube.coords("latitude", dim_coords=True):
+        return False
+    return True
+
+
+def compute_reduced_grid_weights(cube):
+    """compute area weights for the reduced gaussian grid"""
+    nh_latitudes = np.ma.masked_less(cube.coord("latitude").points, 0)
+    unique_lats, gridpoints_per_lat = np.unique(nh_latitudes, return_counts=True)
+    unique_lats, gridpoints_per_lat = unique_lats[0:-1], gridpoints_per_lat[0:-1]
+    areas = []
+    last_angle = 0
+    earth_radius = 6371
+    for latitude, amount in zip(unique_lats, gridpoints_per_lat):
+        delta = latitude - last_angle
+        current_angle = last_angle + 2 * delta
+        sin_diff = np.sin(np.deg2rad(current_angle)) - np.sin(np.deg2rad(last_angle))
+        ring_area = 2 * np.pi * earth_radius**2 * sin_diff
+        grid_area = ring_area / amount
+        areas.extend([grid_area] * amount)
+        last_angle = current_angle
+    areas = np.append(areas[::-1], areas)
+    area_weights = np.broadcast_to(areas, cube.data.shape)
+    return area_weights
+
+
+def compute_regular_grid_weights(cube):
+    """compute area weights for a regular lat/lon grid"""
+    cube.coord("latitude").guess_bounds()
+    cube.coord("longitude").guess_bounds()
+    return iris.analysis.cartography.area_weights(cube)
