@@ -5,6 +5,10 @@ Breaking
 --------
 - Drop support for Python<=3.10 (PR #121)
 
+Features
+--------
+- Support for OpenIFS data on regular grids (PR #119)
+
 
 ScriptEngine Tasks for EC-Earth 0.8.0
 ======================================
